# learning-sapu-django

./: db.sqlite3  main.py  pyproject.toml
accounts/: urls.py
config/: settings.py  urls.py
diary/: forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_page_picture.py
static/diary/css/: base.css
static/diary/js/: base.js
templates/base/: diary_base.html
templates/diary/: index.html  page_confirm_delete.html  page_form.html  page_list.html
templates/registration/: login.html
